Bug 168822 - WebAssembly: miscellaneous spec fixes
Summary: WebAssembly: miscellaneous spec fixes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: JF Bastien
URL:
Keywords:
Depends on:
Blocks: 159775
  Show dependency treegraph
 
Reported: 2017-02-23 22:57 PST by JF Bastien
Modified: 2017-02-24 18:05 PST (History)
7 users (show)

See Also:


Attachments
patch (28.21 KB, patch)
2017-02-23 23:03 PST, JF Bastien
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from ews116 for mac-elcapitan (1.54 MB, application/zip)
2017-02-24 00:19 PST, Build Bot
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description JF Bastien 2017-02-23 22:57:03 PST
Trying to figure out remaining bugs is looking for a needle in a haystack. Let reduce the number of "skip" spec tests in the hope that it serves as a hay sifter and finds our needle.
Comment 1 JF Bastien 2017-02-23 23:03:20 PST
Created attachment 302649 [details]
patch

I'll do the other tests in a follow-up patch.
Comment 2 Saam Barati 2017-02-23 23:42:49 PST
Comment on attachment 302649 [details]
patch

View in context: https://bugs.webkit.org/attachment.cgi?id=302649&action=review

> JSTests/wasm/spec-tests/imports.wast.js:59
> +      if (e instanceof WebAssembly.LinkError) return; // Note: this is fixed in tip-of-tree wabt.

Maybe a FIXME?
Comment 3 Build Bot 2017-02-24 00:19:36 PST
Comment on attachment 302649 [details]
patch

Attachment 302649 [details] did not pass mac-debug-ews (mac):
Output: http://webkit-queues.webkit.org/results/3183686

New failing tests:
media/modern-media-controls/macos-fullscreen-media-controls/macos-fullscreen-media-controls-drag.html
media/modern-media-controls/macos-fullscreen-media-controls/macos-fullscreen-media-controls-drag-is-prevented-over-button.html
Comment 4 Build Bot 2017-02-24 00:19:39 PST
Created attachment 302654 [details]
Archive of layout-test-results from ews116 for mac-elcapitan

The attached test failures were seen while running run-webkit-tests on the mac-debug-ews.
Bot: ews116  Port: mac-elcapitan  Platform: Mac OS X 10.11.6
Comment 5 WebKit Commit Bot 2017-02-24 18:04:16 PST
Comment on attachment 302649 [details]
patch

Clearing flags on attachment: 302649

Committed r212983: <http://trac.webkit.org/changeset/212983>
Comment 6 WebKit Commit Bot 2017-02-24 18:05:00 PST
All reviewed patches have been landed.  Closing bug.