JSTests/wasm/js-api/global-error.js
@@ -187,3 +187,26 @@ for ( let imp of [undefined, null, {}, () => {}, "number", new Number(4)]) {
     const module = new WebAssembly.Module(bin.get());
     assert.throws(() => new WebAssembly.Instance(module, { imp: { global: imp } }), WebAssembly.LinkError, "imported global must be a number (evaluating 'new WebAssembly.Instance(module, { imp: { global: imp } })')");
 }
+
+{
+    const builder = new Builder()
+        .Type().End()
+        .Global().I64(0, "immutable").End()
+        .Export()
+            .Global("bigInt", 0)
+        .End();
+    const module = new WebAssembly.Module(builder.WebAssembly().get());
+    assert.throws(() => new WebAssembly.Instance(module), WebAssembly.LinkError, "exported global cannot be an i64 (evaluating 'new WebAssembly.Instance(module)')");
+}
+
+{
+    const builder = new Builder()
+        .Type().End()
+        .Import()
+            .Global().I64("imp", "global", "immutable").End()
+        .End()
+        .Function().End()
+        .Global().GetGlobal("i64", 0, "immutable").End();
+    const module = new WebAssembly.Module(builder.WebAssembly().get());
+    assert.throws(() => new WebAssembly.Instance(module, { imp: { global: undefined } }), WebAssembly.LinkError, "imported global cannot be an i64 (evaluating 'new WebAssembly.Instance(module, { imp: { global: undefined } })')");
+}
